--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная</title>
+    <title>О курсе</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/Fav.jpg" type="image/x-icon">
 </head>
@@ -28,9 +28,9 @@
             </a>
             <nav>
                 <ul class="menu">
-                    <li class="menu_list"><a class="menu_link" href="index.html"> Главная</a></li>
-                    <li class="menu_list"><a class="menu_link" href="students.html"> Студенты</a></li>
-                    <li class="menu_list"><a class="menu_link menu_link_activ" href="about.html"> О курсе</a></li>
+                    <li class="menu_list"><a class="menu_link" href="index.html">Главная</a></li>
+                    <li class="menu_list"><a class="menu_link" href="students.html">Студенты</a></li>
+                    <li class="menu_list"><a class="menu_link menu_link_activ" href="about.html">О курсе</a></li>
                     <li class="menu_list"><a class="menu_link" href="contacts.html"> Контакты</a></li>
                 </ul>
             </nav>
