--- a/aboutMe.html
+++ b/aboutMe.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Контакты</title>
+    <title>О бо мне</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/Fav.jpg" type="image/x-icon">
 </head>
@@ -29,29 +29,18 @@
             <nav>
                 <ul class="menu">
                     <li class="menu_list"><a class="menu_link" href="index.html">Главная</a></li>
-                    <li class="menu_list"><a class="menu_link" href="students.html">Студенты</a></li>
+                    <li class="menu_list"><a class="menu_link menu_link_activ" href="students.html">Студенты</a></li>
                     <li class="menu_list"><a class="menu_link" href="about.html">О курсе</a></li>
-                    <li class="menu_list"><a class="menu_link menu_link_activ" href="contacts.html"> Контакты</a></li>
+                    <li class="menu_list"><a class="menu_link" href="contacts.html">Контакты</a></li>
                 </ul>
             </nav>
             <a class="button" href="#">Войти</a>
         </header>
-        <main class="content-contfct">
-            <h1 class="contacts_taitl">Как нас найти 🗺️️</h1>
-            <iframe class="maps"
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d40529.30613030521!2d47.26438927429206!3d56.11620324010981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1677338649754!5m2!1sru!2sru"
-                width="100%" height="370" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <h2 class="contacts_text">Наши контакты</h2>
-            <div class="adres_all">
-                <p>Адрес: г. Санкт-Петербург, Дворцовая пл., 2, 190000
-                </p>
-                <p>
-                    <a href="#">Тел: +7 (812) 555-55-55</a>
-                </p>
-            </div>
-
-
+        <main class="container">
+            <div class="MyСontacts">мои-контакты</div>
+            <div class="Progress">Достижения</div>
+            <div class="photo"><img width="100px" height="135px" src="img/st1.jpg" alt="студент 1"> </div>
+            <div class="name">Павлова Надежда</div>
         </main>
     </div>
     <footer class="footer">
