--- a/aboutMe.html
+++ b/aboutMe.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>О курсе</title>
+    <title>О бо мне</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/Fav.jpg" type="image/x-icon">
 </head>
@@ -29,26 +29,20 @@
             <nav>
                 <ul class="menu">
                     <li class="menu_list"><a class="menu_link" href="index.html">Главная</a></li>
-                    <li class="menu_list"><a class="menu_link" href="students.html">Студенты</a></li>
-                    <li class="menu_list"><a class="menu_link menu_link_activ" href="about.html">О курсе</a></li>
-                    <li class="menu_list"><a class="menu_link" href="contacts.html"> Контакты</a></li>
+                    <li class="menu_list"><a class="menu_link menu_link_activ" href="students.html">Студенты</a></li>
+                    <li class="menu_list"><a class="menu_link" href="about.html">О курсе</a></li>
+                    <li class="menu_list"><a class="menu_link" href="contacts.html">Контакты</a></li>
                 </ul>
             </nav>
             <a class="button" href="#">Войти</a>
         </header>
-        <main class="content-about">
-            <h1 class="taitl">О курсе 📱</h1>
-            <p class="about_text">Посмотрите видео о нас</p>
-            <video class="video" poster="img/video.jpg" controls>
-                <source src="video.mp4" type="video/mp4">
-                <source src="video.ogg" type="video/ogg">
-                <source src="video.webm" type="video/webm">
-                <object data="video.mp4" width="470" height="255">
-                    <embed src="video.swf" width="470" height="255">
-                </object>
-            </video>
+        <main class="container">
+            <div class="MyСontacts">мои-контакты</div>
+            <div class="Progress">Достижения</div>
+            <div class="photo"><img width="100px" height="135px" src="img/st1.jpg" alt="студент 1"> </div>
+            <div class="name">Павлова Надежда</div>
         </main>
-    </div>  
+    </div>
     <footer class="footer">
         2023 &COPY; <a class="text_end" href="#">учебный центр</a>
     </footer>
