Исправление после валидатора

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -39,7 +39,7 @@
         <main class="container">
             <div class="MyСontacts">мои-контакты</div>
             <div class="Progress">Достижения</div>
-            <div class="photo"><img width="100px" height="135px" src="img/st1.jpg" alt="студент 1"> </div>
+            <div class="photo"><img src="img/st1.jpg" alt="студент 1"> </div>
             <div class="name">Павлова Надежда</div>
         </main>
     </div>
