--- a/students.html
+++ b/students.html
@@ -40,25 +40,25 @@
             <h2 class="sabtitl">Студенты потока 08.02.2020 👧👦</h2>
             <div class="students">
                 <div class="student">
-                    <a href="aboutMe.html"><img width="200px" height="270px" src="img/st1.jpg" alt="студент 1"></a> 
+                    <a class="photoSt" href="aboutMe.html"><img src="img/st1.jpg" alt="студент 1"></a> 
                     <a class="namestudets" href="aboutMe.html">Павлова Надежда</a>
                 </div>
 
                 <div class="student">
-                    <a href="aboutMe.html"><img width="200px" height="270px" src="img/st2.jpg" alt="студент 2"></a> 
+                    <a href="aboutMe.html"><img src="img/st2.jpg" alt="студент 2"></a> 
                     <a class="namestudets" href="aboutMe.html">Александр Иванов</a>
                     <p class="nustudent">новичок</p>
                 </div>
                 <div class="student">   
-                    <a href="aboutMe.html"><img width="200px" height="270px" src="img/st3.jpg" alt="студент 3"></a> 
+                    <a href="aboutMe.html"><img src="img/st3.jpg" alt="студент 3"></a> 
                     <a class="namestudets" href="aboutMe.html">Мария Александрова</a>
                 </div>
                 <div class="student">
-                    <a href="aboutMe.html"><img width="200px" height="270px" src="img/st4.jpg" alt="студент 4"></a> 
+                    <a href="aboutMe.html"><img src="img/st4.jpg" alt="студент 4"></a> 
                     <a class="namestudets" href="aboutMe.html">Мария Ивановна</a>
                 </div>
                 <div class="student">
-                    <a href="aboutMe.html"><img width="200px" height="270px" src="img/st5.jpg" alt="студент 5"></a> 
+                    <a href="aboutMe.html"><img src="img/st5.jpg" alt="студент 5"></a> 
                     <a class="namestudets" href="aboutMe.html"> Василиса Ивановна</a>
                 </div>
             </div>
