--- a/contacts.html
+++ b/contacts.html
@@ -40,7 +40,7 @@
             <h1 class="contacts_taitl">Как нас найти 🗺️️</h1>
             <iframe class="maps"
                 src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d40529.30613030521!2d47.26438927429206!3d56.11620324010981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1677338649754!5m2!1sru!2sru"
-                width="100%" height="370" style="border:0;" allowfullscreen="" loading="lazy"
+                style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             <h2 class="contacts_text">Наши контакты</h2>
             <div class="adres_all">
