--- a/aboutMe.html
+++ b/aboutMe.html
@@ -37,10 +37,16 @@
             <a class="button" href="#">Войти</a>
         </header>
         <main class="container">
-            <div class="MyСontacts">мои-контакты</div>
-            <div class="Progress">Достижения</div>
+            <div class="MyСontacts">Мои-контакты
+                <p class="textMyContacts"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque tempore tenetur enim beatae facere rem provident voluptatem non debitis molestias quasi quas ea minus accusamus voluptates, quaerat asperiores incidunt voluptatibus! Lorem ipsum dolor sit amet consectetur, adipisicing lo Lorem ipsum dolor sit amet consectetur adipisicing elit. Id consequatur officiis molestiae nihil ali</p>
+            </div>
+            <div class="Progress">Достижения
+                <p class="textMyContacts"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque tempore tenetur enim beatae facere rem provident voluptatem non debitis molestias quasi quas ea minus accusamus voluptates, quaerat asperiores incidunt voluptatibus! Lorem ipsum dolor sit amet consectetur, adipisicing  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam itaque libero aut nemo. Unde, incidunt atque! Magni dicta excepturi cum consequatur distinctio dolorum voluptatem eum ea, laboriosam nesciunt consequuntur nihil? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit dolore odio ipsum culpa veniam id quod dolor illo error! Magni enim corporis quia nihil excepturi, fugiat suscipit delectus repellendus molestiae. </p>
+            </div>
             <div class="photo"><img src="img/st1.jpg" alt="студент 1"> </div>
-            <div class="name">Павлова Надежда</div>
+            <div class="name">Павлова Надежда
+                <p class="textMyContacts"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque tempore tenetur enim beatae facere rem provident voluptatem non debitis molestias quasi quas ea minus accusamus voluptates, quaerat asperiores incidunt voluptatibus! Lorem ipsum dolor sit amet consectetur, adipisicing  lo</p>
+            </div>
         </main>
     </div>
     <footer class="footer">
